--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,3 +1,28 @@
+[tool.poetry]
+name = "sem-emergency-stop"
+version = "1.3.0"
+description = "Quickly stop all Google Ads advertising"
+readme = "README.md"
+homepage = "https://github.com/getyourguide/sem-emergency-stop"
+authors = ["GetYourGuide GmbH"]
+license = "Apache License, Version 2.0"
+packages = [
+  { include = "ses" },
+]
+
+[tool.poetry.dependencies]
+python = "^3.8"
+google-ads = "^14.1.0"
+
+[tool.poetry.dev-dependencies]
+flake8 = "^4.0.1"
+black = "^21.11b1"
+
 [build-system]
-requires = ["setuptools", "wheel"]
-build-backend = "setuptools.build_meta:__legacy__"
+requires = ["poetry-core>=1.0.0"]
+build-backend = "poetry.core.masonry.api"
+
+[tool.poetry.scripts]
+sem-emergency-stop = "ses.main:run"
+ses-create-org-token = "ses.auth:create_org_token"
+ses-reset-auth = "ses.auth:reset_auth"
